[package]
name = "breakout1-kv-store"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
serde = {version = "1.0.228",features = ["derive"]}
tokio = {version = "1.49.0",features = ["macros","rt-multi-thread"]}
wincode = { version = "0.4.4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "engine_bench"
harness = false
